# model2json

./: .gitignore  .gitmodules  CMakeLists.txt
samples/: Door.fbx  demo.html  model.json
src/: exportor.cpp  exportor.h  exportor.hpp  main.cpp
